tests/NormalTests/paczka1/fuzzy1/42469696.err
Error in line 1: ifVWR A817 66,0
Error in line 2: ifVWR S867 19,4
Error in line 3: W37YcwJz S867 23,6
Error in line 8: i0oWpLFNsW A817 37,07
Error in line 14: lYX3BX6T4 S867 55,7
Error in line 28: A817 A817 43,2
Error in line 30: A817 S687 6,22
